# eass-auto-grader

./: .env.example  .gitignore  Makefile  README.md  codex_prompt.txt  docker-compose.qdrant.yml  evaluation_schema.json  gemini_prompt.txt  prompt.md  prompt.txt  pyproject.toml  run.sh  submission.csv.example
examples/: .keep  README.md  codex_prompt.example.txt  gemini_prompt.example.txt  gemini_settings.example.json  submission.csv
scripts/: compare_repos.py  compare_repos_v2.py  creativity_assessment.py  deep_analysis.py  detect_plagiarism.py  generate_combined_report.py  generate_plagiarism_html.py  generate_prompt.py  grade_with_pydantic.py  models.py  plot_similarity.py  responsible_similarity_analysis.py  run_evaluation.py  run_evaluation_parallel.py  smart_code_embeddings.py  visualize_deep_analysis.py  visualize_similarity.py
