[project]
name = "ranker-eass"
version = "1.0.0"
description = "Automated student repo evaluation pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.3.2",
    "qdrant-client>=1.11.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2.0",
]

[project.scripts]
evaluate = "scripts.run_evaluation:main"
